fix font visibility - input fields & font-weight
kill font-weight 300 everywhere

--- a/app/assets/stylesheets/subscriptions.css.scss
+++ b/app/assets/stylesheets/subscriptions.css.scss
@@ -8,7 +8,6 @@ body.subscriptions {
     h1 { margin: 6px 0 22px 0; }
     p {
       font-size: 1.2em;
-      font-weight: 300;
       line-height: 24px;
     }
   }
